--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 email.password-recover.token.minutes=${PASSWORD_RECOVER_TOKEN_MINUTES:30}
 email.password-recover.uri=${PASSWORD_RECOVER_URI:http://localhost:5173/recover-password/}
+
+token.sonar=sqp_8c0ea717a3d02a6bcb5927f6527747b99c3ded41
