--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ email.password-recover.token.minutes=${PASSWORD_RECOVER_TOKEN_MINUTES:30}
 email.password-recover.uri=${PASSWORD_RECOVER_URI:http://localhost:5173/recover-password/}
 
 token.sonar=sqp_8c0ea717a3d02a6bcb5927f6527747b99c3ded41
+
+aws.access_key_id=${AWS_KEY}
+aws.secret_access_key=${AWS_SECRET}
+s3.bucket=${ECOMMERCE_BUCKET_NAME}
+s3.region=${ECOMMERCE_BUCKET_REGION}
+
+spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:10MB}
+spring.servlet.multipart.max-request-size=${MAX_FILE_SIZE:10MB}
