--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -22,14 +22,14 @@ jobs:
       - name: Build project
         run: mvn clean install
 
-      - name: Login do Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ecommerce-prod .
-
-      - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/ecommerce-prod
+#      - name: Login do Docker Hub
+#        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+#
+#      - name: Build Docker image
+#        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ecommerce-prod .
+#
+#      - name: Push Docker image
+#        run: docker push ${{ secrets.DOCKER_USERNAME }}/ecommerce-prod
 
      
     
